# MusicalKeyCNN-API

./: .gitignore  Dockerfile  README.md  api.py  mise.toml  predict_keys.py  pyproject.toml  requirements.txt
apps/api/: Dockerfile  pyproject.toml
apps/api/src/api/: main.py
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx
